RESOLVED FIXED264962
history properties should throw SecurityError when not in a fully active Document
https://bugs.webkit.org/show_bug.cgi?id=264962
Summary history properties should throw SecurityError when not in a fully active Docu...
Ahmad Saleem
Reported 2023-11-16 09:34:50 PST
Hi Team, While going through WebKit / Safari specific failure, I came across another and I just wanted to raise bug so we can track it. WPT Test Case: https://wpt.fyi/results/html/browsers/history/the-history-interface/history_properties_only_fully_active.html?label=master&label=experimental&aligned=&q=the-history-interface WPT Test Case Link: http://wpt.live/html/browsers/history/the-history-interface/history_properties_only_fully_active.html Blink Commit: https://chromium-review.googlesource.com/c/chromium/src/+/633823 Web-Spec: https://html.spec.whatwg.org/#shared-history-push/replace-state-steps "If document is not fully active, then throw a "SecurityError" DOMException." Just wanted to raise so we can fix it. Thanks!
Attachments
sideshowbarker
Comment 1 2023-11-20 15:29:39 PST
Radar WebKit Bug Importer
Comment 2 2023-11-23 09:35:55 PST
EWS
Comment 3 2024-02-07 18:18:38 PST
Committed 274260@main (e4cbd15de56a): <https://commits.webkit.org/274260@main> Reviewed commits have been landed. Closing PR #20764 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.