history properties should throw SecurityError when not in a fully active Document https://bugs.webkit.org/show_bug.cgi?id=264962

Reviewed by Darin Adler and Ryosuke Niwa.

This change makes all History API methods and getters and setters throw
a SecurityError if called from a document that isn’t fully active (has
no Frame) — as required by the series of algorithms in the HTML spec
starting at https://html.spec.whatwg.org/multipage/#dom-history-length

* LayoutTests/http/tests/dom/same-origin-detached-window-properties-expected.txt:
* LayoutTests/http/tests/dom/same-origin-detached-window-properties.html:
* LayoutTests/imported/w3c/web-platform-tests/html/browsers/history/the-history-interface/history_properties_only_fully_active-expected.txt:
* Source/WebCore/bindings/js/JSHistoryCustom.cpp:
(WebCore::JSHistory::state const):
* Source/WebCore/page/History.cpp:
(WebCore::isDocumentFullyActive):
(WebCore::documentNotFullyActive):
(WebCore::History::length const):
(WebCore::History::scrollRestoration const):
(WebCore::History::setScrollRestoration):
(WebCore::History::back):
(WebCore::History::forward):
(WebCore::History::go):
(WebCore::History::stateObjectAdded):
(WebCore::History::state): Deleted.
* Source/WebCore/page/History.h:

Canonical link: https://commits.webkit.org/274260@main