Source/WebCore/page/History.h
@@ -41,8 +41,8 @@ class History final : public ScriptWrappable, public RefCounted<History>, public
 public:
     static Ref<History> create(LocalDOMWindow& window) { return adoptRef(*new History(window)); }
 
-    unsigned length() const;
-    
+    ExceptionOr<unsigned> length() const;
+
     enum class ScrollRestoration {
         Auto,
         Manual
@@ -51,17 +51,17 @@ public:
     ExceptionOr<ScrollRestoration> scrollRestoration() const;
     ExceptionOr<void> setScrollRestoration(ScrollRestoration);
 
-    SerializedScriptValue* state();
+    ExceptionOr<SerializedScriptValue*> state();
     JSValueInWrappedObject& cachedState();
     JSValueInWrappedObject& cachedStateForGC() { return m_cachedState; }
 
-    void back();
-    void forward();
-    void go(int);
+    ExceptionOr<void> back();
+    ExceptionOr<void> forward();
+    ExceptionOr<void> go(int);
 
-    void back(Document&);
-    void forward(Document&);
-    void go(Document&, int);
+    ExceptionOr<void> back(Document&);
+    ExceptionOr<void> forward(Document&);
+    ExceptionOr<void> go(Document&, int);
 
     bool isSameAsCurrentState(SerializedScriptValue*) const;
 
